[package]
name = "rust_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


mdbook = { path = "./lib/mdBook"}
native-dialog = "0.6.4"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.9.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
